# OOP-LAB3

./: CMakeLists.txt  README.md
include/: array.h  figure.h  pentagon.h  point.h  rhombus.h  trapezoid.h
src/: array.cpp  figure.cpp  main.cpp  pentagon.cpp  point.cpp  rhombus.cpp  trapezoid.cpp
test/: test.cpp
